solc_ossfuzz_seed_corpus/test_sol/test_e684b6dc1a287edec13705d2c143352f3c3b572a32410e38d9ecf1fb0eaed9e5_920e9ccbf083e8e2796f6d907639ac2da0df7b7c_sol.sol
==== Source:  ====

==== Source: su0.sol ====
pragma solidity >= 0.0.0;

==== Source: su1.sol ====
library L0 {
  modifier m0() 
  {
    unchecked {
      bool l0 = true;
      {
        while (((uint40(804955924509) ^ ((uint40(1099511627775) - uint40(189681234682)) & uint40(0))) != uint40(126496068888)))
        {
          break;
        }
        address payable l1 = payable(address(0x0000000000000000000000000000000000000006));
        while ((bytes28(0x08d6c75f7ae82392429db56a2ce59d845924d3ea73af9d0ba86222f9) >= bytes1(0x00)))
        {
          {
            bytes11 l2 = bytes11(0xffffffffffffffffffffff);
            assembly
            {
              for 
              {
                for 
                { let yulinit0 := 0 } lt(yulinit0, mod(l0, 11)) { yulinit0 := add(yulinit0, 1) }
                {
                }
                l1 := 0
                let al0 := mload(add(0x80, mod(l1, 2048)))
              }
              l1
              {
                l1 := l0
              }
              {
                let al1 := l2
                al1 := l2
                function af0(ai0, ai1, ai2, ai3, ai4, ai5, ai6, ai7, ai8, ai9, ai10, ai11, ai12, ai13, ai14, ai15, ai16, ai17, ai18) -> ao0, ao1, ao2, ao3, ao4, ao5, ao6, ao7, ao8, ao9, ao10, ao11, ao12, ao13, ao14, ao15, ao16, ao17, ao18
                {
                  extcodecopy(ai0, add(0x80, mod(ai6, 1024)), ai12, mod(ai17, 1024))
                  extcodecopy(115792089237316195423570985008687907853269984665640564039457584007913129639935, add(0x80, mod(ai6, 1024)), iszero(create(115792089237316195423570985008687907853269984665640564039457584007913129639935, add(0x80, mod(ai6, 1024)), 0)), mod(ai16, 1024))
                  ao10 := ai17
                  stop()
                }
                switch sload(79612158148299218853366146190559876489779142316163176345205060824663567594792)
                case 3638443300783308743139399540487935120380152299342263155090712872754121588852
                {
                  function af1(ai19, ai20, ai21, ai22, ai23) -> ao19, ao20, ao21, ao22, ao23, ao24
                  {
                    let al2 := sub(ai20, 0)
                    calldatacopy(add(0x80, mod(mload(add(0x80, mod(ai6, 1024))), 1024)), 0, mod(ai21, 1024))
                    ao24 := ai20
                  }
                }
                case 115792089237316195423570985008687907853269984665640564039457584007913129639935
                {
                }
              }
            }
            function (int8, address payable) internal   returns (bytes11, address[5][][] memory) l3;
          }
          bytes18 l4 = bytes18(0xffffffffffffffffffffffffffffffffffff);
          continue;
        }
      }
      address payable l5 = payable(address(0x0000000000000000000000000000000000000007));
    }
    _;
    uint128 l6 = uint128(316343387965465968150199061098476739796);
    address payable l7 = payable(address(bytes20(address(0xFFfFfFffFFfffFFfFFfFFFFFffFFFffffFfFFFfF))));
  }
}
import "su0.sol";
pragma solidity >= 0.0.0;
// ----
// DeclarationError 8198: (su1.sol:2139-2142): Identifier "ai6" not found.
